# datasink

./: LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
datasink/: client.py  datasink.py  initialize.py  log.py  transfer.py  version.py  worker.py
examples/: README.md  ds_file.py  ds_hub.py  ds_pub.py  ds_queue.py  ds_sub.py  hub.yml  job.json  pub.yml  sub.yml
scripts/: datasink  ds_client  ds_sleep  ds_worker
util/: make_release.py
