[metadata]
name = datasink
description = Data Transfer Software for Subaru Telescope
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/datasink
edit_on_github = False
github_project = naojsoft/datasink
keywords = subaru, telescope, observation, data, transfer
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    pika>=1.1.0
    pyyaml>=5.3.1
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/datasink
